[gd_scene load_steps=15 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://ColorSelectionCircle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.tres" type="Theme" id=3]
[ext_resource path="res://assets/SupermercadoOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://LevelSelection.gd" type="Script" id=7]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://VolumeControl.tscn" type="PackedScene" id=9]
[ext_resource path="res://BackBtn.tscn" type="PackedScene" id=10]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 150
font_data = ExtResource( 4 )

[node name="LevelSelection" type="Node2D"]
script = ExtResource( 7 )

[node name="Background2" parent="." instance=ExtResource( 1 )]

[node name="Box" type="HBoxContainer" parent="."]
margin_left = 36.0
margin_top = 234.0
margin_right = 990.0
margin_bottom = 581.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialBox" type="VBoxContainer" parent="Box"]
margin_left = 57.0
margin_right = 201.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn" parent="Box/TutorialBox" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 144.0
margin_bottom = 144.0
text = "Tutorial"

[node name="Label" type="Label" parent="Box/TutorialBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 185.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Best:"
align = 1

[node name="Score" type="Label" parent="Box/TutorialBox"]
margin_top = 189.0
margin_right = 144.0
margin_bottom = 249.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "0000"
align = 1

[node name="LabelClicks" type="Label" parent="Box/TutorialBox"]
margin_top = 253.0
margin_right = 144.0
margin_bottom = 290.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Clicks"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clicks" type="Label" parent="Box/TutorialBox"]
margin_top = 294.0
margin_right = 144.0
margin_bottom = 343.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 7 )
text = "0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="Box"]
margin_left = 205.0
margin_right = 285.0
margin_bottom = 347.0
rect_min_size = Vector2( 80, 0 )

[node name="EasyBox" type="VBoxContainer" parent="Box"]
margin_left = 289.0
margin_right = 433.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn" parent="Box/EasyBox" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 144.0
margin_bottom = 144.0
text = "Easy"

[node name="Label" type="Label" parent="Box/EasyBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 185.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Best:"
align = 1

[node name="Score" type="Label" parent="Box/EasyBox"]
margin_top = 189.0
margin_right = 144.0
margin_bottom = 249.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "0000"
align = 1

[node name="LabelClicks" type="Label" parent="Box/EasyBox"]
margin_top = 253.0
margin_right = 144.0
margin_bottom = 290.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Clicks"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clicks" type="Label" parent="Box/EasyBox"]
margin_top = 294.0
margin_right = 144.0
margin_bottom = 343.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 7 )
text = "0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Box"]
margin_left = 437.0
margin_right = 517.0
margin_bottom = 347.0
rect_min_size = Vector2( 80, 0 )

[node name="MediumBox" type="VBoxContainer" parent="Box"]
margin_left = 521.0
margin_right = 665.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn" parent="Box/MediumBox" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 144.0
margin_bottom = 144.0
text = "Medium"

[node name="Label" type="Label" parent="Box/MediumBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 185.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Best:"
align = 1

[node name="Score" type="Label" parent="Box/MediumBox"]
margin_top = 189.0
margin_right = 144.0
margin_bottom = 249.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "0000"
align = 1

[node name="LabelClicks" type="Label" parent="Box/MediumBox"]
margin_top = 253.0
margin_right = 144.0
margin_bottom = 290.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Clicks"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clicks" type="Label" parent="Box/MediumBox"]
margin_top = 294.0
margin_right = 144.0
margin_bottom = 343.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 7 )
text = "0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="Box"]
margin_left = 669.0
margin_right = 749.0
margin_bottom = 347.0
rect_min_size = Vector2( 80, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="HardBox" type="VBoxContainer" parent="Box"]
margin_left = 753.0
margin_right = 897.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn" parent="Box/HardBox" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 144.0
margin_bottom = 144.0
text = "Hard"

[node name="Label" type="Label" parent="Box/HardBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 185.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Best:"
align = 1

[node name="Score" type="Label" parent="Box/HardBox"]
margin_top = 189.0
margin_right = 144.0
margin_bottom = 249.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "0000"
align = 1

[node name="LabelClicks" type="Label" parent="Box/HardBox"]
margin_top = 253.0
margin_right = 144.0
margin_bottom = 290.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Clicks"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clicks" type="Label" parent="Box/HardBox"]
margin_top = 294.0
margin_right = 144.0
margin_bottom = 343.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 7 )
text = "0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Title" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_right = 1035.0
margin_bottom = 180.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 6 )
text = "Col    rall"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSelection" parent="." instance=ExtResource( 2 )]
position = Vector2( 522, 90 )

[node name="VolumeControl" parent="." instance=ExtResource( 9 )]
margin_left = 954.0
margin_top = -5.0
margin_right = 954.0
margin_bottom = -5.0

[node name="BackBtn" parent="." instance=ExtResource( 10 )]
scene = ExtResource( 8 )

[connection signal="pressed" from="Box/TutorialBox/Btn" to="." method="_on_Btn_pressed" binds= [ -1 ]]
[connection signal="pressed" from="Box/EasyBox/Btn" to="." method="_on_Btn_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Box/MediumBox/Btn" to="." method="_on_Btn_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Box/HardBox/Btn" to="." method="_on_Btn_pressed" binds= [ 2 ]]
